js/js.translator/testData/incremental/invalidation/abstractClassWithJsExport/lib2/lib.0.kt
class FooImpl : Foo() {
   override fun foo() = "O"
}